--- a/Kcamera/Info.plist
+++ b/Kcamera/Info.plist
@@ -30,6 +30,12 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>程序需要使用您的相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>程序需要使用您的麦克风</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>程序需要访问您的相册</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
